--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5434/testTask
+spring.datasource.username=bukaevsky
+spring.datasource.password=stanislav
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
